nx-libs (2:3.5.0.25-0x2go1) UNRELEASED; urgency=low

  [ Mihai Moldovan ]
  * Add 029_nxcomp_ppc64.full+lite.patch. Fix sockaddr handling on
    Big Endian systems (like PPC64). (Fixes: #515).
  * Add 057_nx-X11-bigendian-ppc64-no-session-window.patch. Fix
    failures in session windows coming up on Big Endian systems
    like PPC64. (Fixes: #516).

  [ Mike Gabriel ]
  * Add 606_nx-X11_build-on-aarch64.full.patch. Build on aarch64
    architectures. (Fixes: #490).
  * Add 027_nxcomp_abstract-X11-socket.full+lite.patch. In proxy mode "server"
    let NX proxy attempt connecting to the abstract X11 socket first, and only
    fallback to the file system socket, if the abstract socket is not
    available. (Fixes: #505).
  * Make 220_nxproxy-bind-loopback-only.full+lite.patch cleanly apply after
    having added 027_nxcomp_abstract-X11-socket.full+lite.patch.
  * Make 016_nx-X11_install-location.debian.patch cleanly apply again.
  * Add 028_nx-X11_abstract-kernel-sockets.full.patch. Provide abstract local
    socket support for Linux based systems. This patch pulls in abstract
    socket relevant code from xtrans 1.2.7. (Fixes: #504).
  * Add 302_nx-X11_xkbbasedir-detection.patch. For detecting XkbBaseDir
    test for xkb/rules/base instead of testing for deprecated file
    xkb/keymap.dir. (Fixes: #40).

 -- Mike Gabriel <mike.gabriel@das-netzwerkteam.de>  Wed, 07 May 2014 09:58:10 +0200

nx-libs (2:3.5.0.24-0x2go1) unstable; urgency=low

  * Clean up debian/patches/series: Remove commented out patches.
  * Make sure, patch 056_nx-X11-Werror-format-security.full.patch gets
    included into rolled tarball (by renaming *.patch to *.full.patch).
  * Update 320_nxagent_configurable-keystrokes.full.patch: The keystrokes config
    file's default name now is keystrokes.cfg (plural).
  * Configurable keystrokes: Don't ignore first XML element in keystrokes.cfg
    anymore. (Fixes: #488).
  * debian/control: