@@ -6,6 +6,11 @@ nx-libs (2:3.5.0.25-0x2go1) UNRELEASED; urgency=low
   * Add 057_nx-X11-bigendian-ppc64-no-session-window.patch. Fix
     failures in session windows coming up on Big Endian systems
     like PPC64. (Fixes: #516).
+  * Improve 105_nxagent_export-remote-keyboard-config.full.patch.
+    Don't print out nonsensical information, if there really was
+    no error when creating the keyboard file or the other way around.
+    Also add the reason when failing to create the keyboard file.
+    Only print an error message if SessionPath *really* is not defined.
 
   [ Mike Gabriel ]
   * Add 606_nx-X11_build-on-aarch64.full.patch. Build on aarch64
